github-finder/deploy/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: github-finder
spec:
  replicas: 2
  selector:
    matchLabels:
      app: github-finder
  template:
    metadata:
      labels:
        app: github-finder
    spec:
      containers:
        - name: github-finder
          image: github-finder:0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: github-finder
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: github-finder
